# SearchAndDoc

./: README.md  docker-compose.yml  main.py  pyproject.toml
helpers/: commands.py
helpers/solr/: __init__.py
models/: channel.py
tests/utils/discord_bot/: conftest.py  test_commands.py
utils/: __init__.py
utils/discord_bot/: bot.py  commands.py
